[gd_scene load_steps=11 format=3 uid="uid://bv0v41gjclh2p"]

[ext_resource type="Texture2D" uid="uid://ctxolfbahflur" path="res://Assets/window_nineslice.png" id="1_2pmox"]
[ext_resource type="Script" uid="uid://ceac3yvj25ry1" path="res://User Interface/song_overview.gd" id="1_bvevf"]
[ext_resource type="FontFile" uid="uid://nugvgdqe6t6c" path="res://Assets/Fonts/Gamey Pixels/Gamey Pixels.ttf" id="2_bvevf"]
[ext_resource type="Texture2D" uid="uid://b0hvoajx63bal" path="res://Assets/close_button.png" id="4_m3oru"]
[ext_resource type="Texture2D" uid="uid://bp4x3nmdvn2hj" path="res://Assets/close_button_clicked.png" id="5_r2o1d"]
[ext_resource type="Texture2D" uid="uid://b0mk5mofv684r" path="res://Assets/close_button_highlight.png" id="6_fqc1p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qv71f"]
texture = ExtResource("4_m3oru")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ew2x"]
texture = ExtResource("5_r2o1d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1o44e"]
texture = ExtResource("6_fqc1p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_leuq6"]

[node name="SongOverview" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.125
offset_top = -78.125
offset_right = 63.125
offset_bottom = 78.125
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvevf")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2pmox")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 64.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Song overview"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0801, 0.08604, 0.09, 1)
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Rating: 0"

[node name="HighestComboLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0801, 0.08604, 0.09, 1)
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Highest Combo: 0"

[node name="NotesHitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0801, 0.08604, 0.09, 1)
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Notes hit: 0/0"

[node name="PerfectHitsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0801, 0.08604, 0.09, 1)
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Perfect Hits: 0"

[node name="SuccessfulTogglesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0801, 0.08604, 0.09, 1)
theme_override_fonts/font = ExtResource("2_bvevf")
theme_override_font_sizes/font_size = 8
text = "Followed audience 0 times!"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.125
offset_top = 2.125
offset_right = -1.125
offset_bottom = 11.125
grow_horizontal = 0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_qv71f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4ew2x")
theme_override_styles/hover = SubResource("StyleBoxTexture_1o44e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_leuq6")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
